--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:collapsedTitleTextAppearance="@style/routineActivity"
-            app:contentScrim="@color/surface"
+            app:contentScrim="@color/surface2"
             android:elevation="4dp"
             app:expandedTitleMarginEnd="100dp"
             app:expandedTitleMarginStart="16dp"
@@ -48,6 +48,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nsv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -70,35 +71,72 @@
                 android:textAppearance="?attr/textAppearanceHeadline4"
                 android:textStyle="bold" />
 
+
             <TextView
                 android:id="@+id/rDetail"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
+                android:layout_marginBottom="5dp"
                 android:text="@string/loremipsum"
                 android:textAppearance="?attr/textAppearanceBody1" />
 
-            <TextView
-                android:id="@+id/rDifficulty"
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:text="Difficulty"
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_height="wrap_content">
+                <TextView
 
-            <TextView
-                android:id="@+id/rCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="@string/difficulty_label"
+                    android:textStyle="bold"
+                    android:textAppearance="?attr/textAppearanceBody1" />
+
+                <TextView
+                    android:id="@+id/rDifficulty"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="@string/difficulty_label"
+
+                    android:textAppearance="?attr/textAppearanceBody1" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:text="Category"
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_height="wrap_content">
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:textStyle="bold"
+                    android:paddingBottom="5dp"
+
+                    android:text="@string/category_label"
+                    android:textAppearance="?attr/textAppearanceBody1" />
+                <TextView
+                    android:id="@+id/rCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+
+                    android:text="@string/category_label"
+                    android:textAppearance="?attr/textAppearanceBody1" />
+            </LinearLayout>
+
 
 
                 <RatingBar
@@ -128,7 +166,11 @@
 
             </androidx.recyclerview.widget.RecyclerView>
 
-            <include layout="@layout/classic_divider" />
+       
+
+            <include
+
+                layout="@layout/classic_divider" />
 
             <LinearLayout
                 android:layout_marginTop="10dp"
@@ -182,7 +224,7 @@
             android:id="@+id/calendarBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+android:layout_marginRight="35dp"
           android:tint="?attr/colorPrimaryVariant"
 
             fab:fab_colorNormal="?attr/colorPrimaryVariant"
@@ -191,6 +233,7 @@
 
         </com.github.clans.fab.FloatingActionButton>
         <com.github.clans.fab.FloatingActionMenu
+            android:layout_marginLeft="35dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:menu_icon="@drawable/ic_play_white"
