--- a/app/src/main/res/layout/cycle_list_item.xml
+++ b/app/src/main/res/layout/cycle_list_item.xml
@@ -30,6 +30,7 @@
                 android:layout_marginBottom="10dp">
 
                 <TextView
+                    android:layout_marginLeft="10dp"
                     android:id="@+id/cycleName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
