--- a/app/src/main/res/layout/exercise_list_item.xml
+++ b/app/src/main/res/layout/exercise_list_item.xml
@@ -65,12 +65,11 @@
                  android:layout_height="wrap_content"
                  android:layout_marginStart="48dp"
                  android:paddingTop="6dp"
-
+android:textColor="@color/black"
                  android:paddingBottom="6dp"
                  android:text="Exercise"
                  android:textSize="20sp"
-
-
+android:alpha="0.6"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
@@ -81,35 +80,37 @@
 
          </androidx.constraintlayout.widget.ConstraintLayout>
 
-         <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+         <androidx.constraintlayout.widget.ConstraintLayout
+             android:id="@+id/expandedConstraintLayout"
+             android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/collapsedRelLayout"
-             android:id="@+id/expandedConstraintLayout"
 
              >
 
              <TextView
                  android:id="@+id/duration"
-                 android:fontFamily="@font/google_sans_italic"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginTop="8dp"
+                 android:fontFamily="@font/google_sans_italic"
                  android:text="30''"
+                 android:textSize="16dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />
 
              <TextView
                  android:id="@+id/reps"
-                 android:fontFamily="@font/google_sans_italic"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginTop="8dp"
+                 android:fontFamily="@font/google_sans_italic"
                  android:text="x45"
+                 android:textSize="16dp"
                  app:layout_constraintStart_toEndOf="@id/duration"
-                 app:layout_constraintTop_toTopOf="parent"
-                 />
+                 app:layout_constraintTop_toTopOf="parent" />
 
              <TextView
                  android:id="@+id/detail"
@@ -119,6 +120,7 @@
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"
                  android:text="Description"
+                 android:textSize="16dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/duration"
