--- a/app/src/main/res/layout/routine_list_item.xml
+++ b/app/src/main/res/layout/routine_list_item.xml
@@ -40,7 +40,7 @@
                     android:layout_marginEnd="1dp"
                     android:contentDescription="@string/register"
                     android:scaleType="centerCrop"
-                    app:layout_constraintBottom_toBottomOf="@+id/routineDuration"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:srcCompat="@drawable/r1" />
 
@@ -79,6 +79,8 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="Difficulty"
+                    android:alpha="0.7"
+                    android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/routineScore"
                     android:layout_marginTop="4dp"
@@ -90,6 +92,8 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="Category"
+                    android:alpha="0.7"
+                    android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/routineDifficulty"
                     android:layout_marginTop="4dp"
