--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -9,7 +9,7 @@
     >
 
     <de.hdodenhof.circleimageview.CircleImageView
-
+        android:layout_marginTop="20dp"
         android:id="@+id/userAvatarReview"
         android:layout_width="96dp"
         android:layout_height="96dp"
