--- a/app/src/main/res/layout/routine_list_item.xml
+++ b/app/src/main/res/layout/routine_list_item.xml
@@ -79,8 +79,8 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="Difficulty"
-                    android:alpha="0.7"
-                    android:textColor="@color/black"
+                    android:alpha="0.8"
+                    android:textColor="@color/anticolor"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/routineScore"
                     android:layout_marginTop="4dp"
@@ -92,8 +92,8 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="Category"
-                    android:alpha="0.7"
-                    android:textColor="@color/black"
+                    android:alpha="0.8"
+                    android:textColor="@color/anticolor"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/routineDifficulty"
                     android:layout_marginTop="4dp"
