--- a/app/src/main/res/drawable-anydpi/ic_explore.xml
+++ b/app/src/main/res/drawable-anydpi/ic_explore.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="#333333"
-    android:alpha="@integer/material_motion_duration_long_1">
+    android:alpha="0.8">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M12,10.9c-0.61,0 -1.1,0.49 -1.1,1.1s0.49,1.1 1.1,1.1c0.61,0 1.1,-0.49 1.1,-1.1s-0.49,-1.1 -1.1,-1.1zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM14.19,14.19L6,18l3.81,-8.19L18,6l-3.81,8.19z"/>
