--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -144,6 +144,7 @@
                     android:layout_marginTop="10dp"
                     style="?android:attr/ratingBarStyleIndicator"
                     android:layout_width="wrap_content"
+                    android:theme="@style/RatingBar2"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:layout_weight="0"
@@ -166,7 +167,7 @@
 
             </androidx.recyclerview.widget.RecyclerView>
 
-       
+
 
             <include
 
