--- a/app/src/main/res/layout/filter_dialog.xml
+++ b/app/src/main/res/layout/filter_dialog.xml
@@ -9,7 +9,7 @@
 
     <Spinner
         android:id="@+id/view_spinner"
-        android:layout_width="200dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/viewLabel"
         app:layout_constraintStart_toStartOf="@+id/sort_spinner"
@@ -23,26 +23,28 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="@string/view_spinner_title"
-        android:textSize="16sp"
+        android:textAppearance="?attr/textAppearanceHeadline6"
+
         app:layout_constraintStart_toStartOf="@+id/sortLabel"
         app:layout_constraintTop_toBottomOf="@+id/sortLabel" />
 
     <TextView
         android:id="@+id/sortLabel"
-        android:layout_width="110dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="@string/sort_spinner_title"
-        android:textSize="16sp"
+        android:textAppearance="?attr/textAppearanceHeadline6"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/sort_spinner"
-        android:layout_width="200dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/sortLabel"
@@ -56,6 +58,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/action_search"
+
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +71,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:text="@string/cancel"
-        android:textColor="@color/white"
+
+        android:backgroundTint="?attr/colorSecondary"
+
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/view_spinner"
         app:layout_constraintEnd_toStartOf="@+id/button5"
