--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,6 +11,8 @@
 
     <color name="whiteTextColor">#fff</color>
     <color name="white">#fff</color>
+    <color name="white_light">#f5f5f5</color>
+    <color name="black_light">#3c3c3c</color>
     <color name="hintColor">#636060</color>
     <color name="primaryTextColor">#CD11CFC5</color>
     <color name="secondaryTextColor">#8038E6</color>
@@ -27,4 +29,8 @@
 
     <color name="surface2">@color/surface</color>
     <color name="dividerColor">@color/black</color>
+    <color name="dialog_choose_icon_color">@color/anticolor_light</color>
+    <color name="dialog_choose_text_color">@color/anticolor_light</color>
+    <color name="anticolor">@color/white</color>
+    <color name="anticolor_light">@color/white_light</color>
 </resources>
