--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,11 +60,11 @@
     </style>
     <style name="RatingBar" parent="Theme.AppCompat">
         <item name="colorControlNormal">@color/logoutColor</item>
-        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlActivated">#FFBF00</item>
     </style>
     <style name="RatingBar2" parent="Theme.AppCompat">
         <item name="colorControlNormal">@color/black</item>
-        <item name="colorControlActivated">#57e32c</item>
+        <item name="colorControlActivated">#FFBF00</item>
     </style>
     <style name="RatingBarOff" parent="Theme.AppCompat">
         <item name="colorControlNormal">@color/black</item>
