--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -21,7 +21,7 @@
     <color name="addPicColor">#00BCD4</color>
     <color name="itemTextColor">#000</color>
     <color name="logoutColor">#F44336</color>
-    <color name="boxColor">#937AB6</color>
+    <color name="boxColor">#616161</color>
     <color name="titleColor">#DDDDDD</color>
     <color name="picColor">#FFBB86FC</color>
     <color name="iconColor">#fff</color>
