--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -4,31 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
-    >
+    android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_marginTop="20dp"
         android:id="@+id/userAvatarReview"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        app:civ_border_width="2dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/avatar"
-        app:civ_border_color="@color/primaryTextColor"/>
+        app:civ_border_color="@color/primaryTextColor"
+        app:civ_border_width="2dp" />
 
 
     <TextView
-        android:layout_marginTop="10dp"
         android:id="@+id/usernameReview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
 
         android:layout_marginBottom="16dp"
 
         android:text="@string/nav_header_title"
-        android:textAppearance="?attr/textAppearanceHeadline5"/>
+        android:textAppearance="?attr/textAppearanceHeadline5" />
 
 
     <RatingBar
@@ -42,6 +41,7 @@
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="@color/boxColor"
+        android:elevation="12dp"
         android:gravity="top|start"
         android:hint="@string/share_details_of_your_own_experience"
         android:inputType="textMultiLine"
@@ -50,8 +50,38 @@
         android:minLines="6"
         android:paddingStart="10dp"
         android:paddingTop="10dp"
-        android:scrollbars="vertical"
-        />
+        android:scrollbars="vertical" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
+        >
+
+
+        <Button
+            android:id="@+id/cancelBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:backgroundTint="?attr/colorSecondary"
+            android:layout_marginRight="30dp"
+            android:text="@string/cancel"
+
+            />
+        <Button
+            android:id="@+id/postBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginLeft="30dp"
+            android:text="@string/post_review"
+            android:textColor="@color/white" />
+
+
+    </LinearLayout>
 
 </LinearLayout>
