--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,7 +35,7 @@
     <color name="colorNav">#fff</color>
     <color name="daySelected">@color/purple_200</color>
 
-
+    <color name="type_of_ex">@color/teal_200</color>
     <color name="surface2">@color/purple_500</color>
     <color name="dividerColor">#BDBDBD</color>
     <color name="drawerlayout">@color/black</color>
