--- a/app/src/main/res/layout/exercise_list_item.xml
+++ b/app/src/main/res/layout/exercise_list_item.xml
@@ -97,6 +97,10 @@ android:alpha="0.6"
                  android:fontFamily="@font/google_sans_italic"
                  android:text="30''"
                  android:textSize="16dp"
+
+                 android:textColor="@color/black"
+
+                 android:alpha="0.6"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />
 
@@ -109,6 +113,9 @@ android:alpha="0.6"
                  android:fontFamily="@font/google_sans_italic"
                  android:text="x45"
                  android:textSize="16dp"
+                 android:textColor="@color/black"
+
+                 android:alpha="0.6"
                  app:layout_constraintStart_toEndOf="@id/duration"
                  app:layout_constraintTop_toTopOf="parent" />
 
@@ -121,6 +128,9 @@ android:alpha="0.6"
                  android:layout_marginBottom="10dp"
                  android:text="Description"
                  android:textSize="16dp"
+                 android:textColor="@color/black"
+
+                 android:alpha="0.6"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/duration"
