--- a/app/src/main/res/drawable-anydpi/ic_play.xml
+++ b/app/src/main/res/drawable-anydpi/ic_play.xml
@@ -3,8 +3,9 @@
     android:height="44dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
+    android:tint="@color/iconColor"
     android:alpha="0.6">
   <path
       android:pathData="M8,5v14l11,-7z"
-      android:fillColor="#FFFFFF"/>
+      android:fillColor="#000000" />
 </vector>
